--- a/CSS-End-3/style.css
+++ b/CSS-End-3/style.css
@@ -1,44 +1,50 @@
-.navlinks a{
-    position: absolute; 
-    right: -190px; 
-    padding:20px; 
-    width: 190px; 
-    font-size: 16px; 
-    transition: 0.3s;
-    border-radius: 0 5px 5px 0;
+.navlinks a {
+  position: absolute;
+  right: -190px;
+  padding: 20px;
+  width: 190px;
+  font-size: 16px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0 5px 5px 0;
 }
 
-a{
-    color: white;
-    text-decoration: none;
+a {
+  color: white;
+  text-decoration: none;
 }
-.link-blog {
-    background-color: #e17b77; 
-    top: 100px;  
-}
-.link-twitter {
-    background-color: #00aced;
-    top: 160px;
-}
-.link-linkedin{
-    background-color: #007bb6;
-    top: 220px;
-}
-.link-facebook {
-    background-color: #3b5998;
-    top: 280px;
-}
-.link-github{
-    background-color: #333;
-    top: 340px;
+a :hover {
+  right: 0;
+  text-decoration: underline;
 }
 
+.navlink_link-blog {
+  background-color: #e17b77;
+  top: 100px;
+}
 
-a:hover{
-    right: 0; 
-    text-decoration: underline;
+.navlink_link-twitter {
+  background-color: #00aced;
+  top: 160px;
 }
-.fa{
-    padding-right:20px;
-    border-left:0px;
+
+.navlink_link-linkedin {
+  background-color: #007bb6;
+  top: 220px;
 }
+
+.navlink_link-facebook {
+  background-color: #3b5998;
+  top: 280px;
+}
+
+.navlink_link-github {
+  background-color: #333;
+  top: 340px;
+}
+
+.fa {
+  padding-right: 20px;
+  border-left: 0px;
+}
+/*# sourceMappingURL=style.css.map */
